# measure-mirror

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_KO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: reproduce-report.yml
.github/workflows/: ci.yml
catalog/: README.md  README_KO.md  draft_specimen.py
catalog/contamination/: augmentation_reinjects_holdout.md  label_encoding_loss.md  target_leak.md
catalog/fn-guard/: anchor-reproduction-failure.md  floor-ceiling-masks-effect.md  implementation-flaw-as-negative.md  instrument-bug-as-verdict.md  kill-tripped-but-invalid.md  latched-transient-as-terminal-event.md  plateau-not-ceiling.md  proxy-not-real-readout.md  pure-fiction-resistance-overreads-honesty.md  short-horizon-false-negative.md  stand-in-not-real-target.md  untestable-substrate.md
catalog/gaming/: anti_signal.md  baseline_inversion.md  best_of_n.md  crippled_baseline.md  effdim_collapse.md  empty_space_trivial.md  length_bloat.md  metric_switch.md  overclaim.md  post_hoc_multiple_comparisons.md  small_n.md  standing_variation.md  template_drawing.md
catalog/self-catch/: adjoint-cost-overestimate.md  baseline-only-direction-missed.md  boundary-grazing-confirm.md  crippled-baseline-euler.md  grim-ratio-assumption.md  mechanism-story-instead-of-accounting-audit.md  never-works-negative-overclaim.md  obs-dissection-causal-independence.md  precision-denominator-swap.md  prereg-clause-defect-family.md  provenance-not-in-the-value.md  proxy-null-removes-binding-constraint.md  sign-bug-generativity.md  swept-knob-compound-pathway.md  tool-self-validation-gap.md  two-factor-ablation-attribution.md  unswept-knob-attribution.md  zero-dep-scope-overgeneralize.md
db/: README.md  gaming_patterns.json  reproductions.jsonl  self_catches.jsonl
db/curated/: contamination.jsonl  false_negative_guards.jsonl  gaming_patterns.json  research_closures.jsonl  self_catches.jsonl
db/measured/: baselines.json  reproductions.jsonl
docs/: CHRONICLE.md  GROUNDING_PROBES_DESIGN.md  GUIDE.md  GUIDE_KO.md  SPEC.md  SPEC_KO.md
eval/self_fpfn/: README.md  (+3 more)
examples/: demo_db.py  demo_field.py  demo_judge.py  demo_scope.py  demo_survivor.py  demo_zero.py  mcp_example.py  quickstart.py  usage_example.py
measure_mirror/: __init__.py  judge.py  mcp_server.py  mm.py  pytest_plugin.py
spec/: gen_vectors.py  reference_verifier.py
stack/: CASE_STUDY_compute_governor.md  CASE_STUDY_compute_governor_KO.md  DISCIPLINE.md  DISCIPLINE_KO.md  MIRROR_STACK.md  MIRROR_STACK_KO.md  PILLARS.md  PILLARS_KO.md  tombstone.py  verify_all.py  verify_self.py
tests/: smoke_installed.py  test_auto_resolution.py  test_chain_attacks.py  test_docs_sync.py  test_draft_specimen.py  test_grounding_probes.py  test_judge.py  test_kill_threshold_validation.py  test_linkage_check.py  test_metric_kind.py  test_mm.py  test_preseal_lint.py  test_properties.py  test_seal_upgrade.py  test_self_fpfn.py  test_spec_vectors.py  test_sync.py  test_tombstone.py
(+26 files in other folders)
