[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "measure-mirror"
version = "0.1.0"
description = "🪞 AI 평가 주장이 진짜 신호인지 측정 착시(거짓양성/음성)인지 자동 적발 — 훈련0·결정론적·의존성0."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mother Seara" }]
keywords = ["evaluation", "integrity", "false-positive", "pre-registration", "audit"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
mcp  = ["mcp>=1.0.0"]

[project.scripts]
mm     = "measure_mirror.mm:_cli"
mm-mcp = "measure_mirror.mcp_server:main"

[tool.setuptools]
packages = ["measure_mirror"]
