[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "measure-mirror"
version = "0.28.0"
description = "Catch AI evaluation illusions — false positives and false negatives — automatically."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mother Seara", email = "ruinbl82@gmail.com" }]
keywords = [
  "evaluation", "integrity", "false-positive", "false-negative",
  "pre-registration", "audit", "reproducibility", "ml-evaluation",
  "ai-safety", "benchmarking", "measurement",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
test  = ["pytest>=7", "hypothesis>=6"]
mcp   = ["mcp>=1.0.0"]
judge = ["openai>=1.0", "anthropic>=0.20"]

[project.scripts]
mm     = "measure_mirror.mm:_cli"
mm-mcp = "measure_mirror.mcp_server:main"

[project.urls]
Homepage   = "https://github.com/mirror-stack/measure-mirror"
Repository = "https://github.com/mirror-stack/measure-mirror"
Issues     = "https://github.com/mirror-stack/measure-mirror/issues"

[tool.setuptools]
packages = ["measure_mirror"]
